--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,117 +1,3 @@
-@keyframes wave {
-  0% {
-    clip-path: polygon(
-      0% 100%,
-      100% 100%,
-      99% 100%,
-      81% 100%,
-      64% 100%,
-      46% 100%,
-      29% 100%,
-      14% 100%,
-      0 100%
-    );
-  }
-
-  10% {
-    clip-path: polygon(
-      0% 100%,
-      100% 100%,
-      100% 90%,
-      84% 94%,
-      66% 95%,
-      47% 94%,
-      31% 95%,
-      14% 96%,
-      0 94%
-    );
-  }
-
-  20% {
-    clip-path: polygon(
-      0% 100%,
-      100% 100%,
-      100% 74%,
-      81% 72%,
-      63% 72%,
-      44% 75%,
-      33% 77%,
-      16% 78%,
-      0 74%
-    );
-  }
-
-  40% {
-    clip-path: polygon(
-      0% 100%,
-      100% 100%,
-      100% 53%,
-      85% 55%,
-      67% 58%,
-      44% 54%,
-      30% 48%,
-      15% 47%,
-      0 49%
-    );
-  }
-
-  60% {
-    clip-path: polygon(
-      0% 100%,
-      100% 100%,
-      100% 24%,
-      86% 25%,
-      69% 29%,
-      53% 34%,
-      37% 38%,
-      18% 40%,
-      0 38%
-    );
-  }
-
-  80% {
-    clip-path: polygon(
-      0% 100%,
-      100% 100%,
-      100% 22%,
-      84% 29%,
-      67% 31%,
-      45% 27%,
-      26% 17%,
-      12% 14%,
-      0 15%
-    );
-  }
-
-  90% {
-    clip-path: polygon(
-      0% 100%,
-      100% 100%,
-      100% 5%,
-      86% 10%,
-      73% 10%,
-      55% 6%,
-      33% 3%,
-      15% 5%,
-      0 9%
-    );
-  }
-
-  100% {
-    clip-path: polygon(
-      0% 100%,
-      100% 100%,
-      100% 0,
-      86% 0,
-      71% 0,
-      55% 0,
-      34% 0,
-      18% 0,
-      0 0
-    );
-  }
-}
-
 .video {
   &__bar {
     width: 100%;
@@ -144,19 +30,26 @@
 .video {
   display: block;
   width: 100%;
-  // height: 100vh;
 }
 
 .hero {
   position: relative;
   .card {
+    padding: $spacing-48;
     width: 468px;
-    background-color: $shams-white;
+    background-color: rgba($color: $shams-white, $alpha: 0.9);
     border-radius: 18px;
     position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 999;
+    top: 10%;
+    right: 100px;
+    z-index: 9;
+
+    @include breakpoint($md, max) {
+      width: 90%;
+      top: 50%;
+      right: 50%;
+      transform: translate(50%, -50%);
+    }
   }
 
   &__card-title {
@@ -167,14 +60,23 @@
   }
 
   &__card-description {
-    height: 130px;
     font-size: $font-md;
     color: $shams-blue-dark;
     margin-bottom: $spacing-48;
-    text-overflow: ellipsis;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+
+    line-clamp: 3;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+
+    overflow: hidden;
   }
 
   &__card-action {
+    margin-bottom: $spacing-24;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -184,36 +86,155 @@
     color: $shams-white;
     border-radius: 999px;
     font-size: $font-md;
-    transition: background-color 0.3s ease-in-out;
+    @include transition-ease(0.3s, background-color);
     position: relative;
+    z-index: 1;
+    border: 1px solid $shams-blue;
     &:hover {
-      background-color: $shams-white;
+      @include transition-ease(0.4s, color);
       color: $shams-blue;
-      border: 1px solid $shams-blue;
     }
 
-    // &::before {
-    //   content: '';
-    //   position: absolute;
-    //   top: 0;
-    //   left: 0;
-    //   right: 0;
-    //   bottom: 0;
-    //   z-index: -1;
-    //   border-radius: 999px;
-    //   // background-color: $shams-blue;
-    //   color: $shams-white;
-    // }
-    // &:hover::before {
-    //   background-color: $shams-white;
-    //   color: $shams-blue;
-    //   animation: wave 4s linear;
-    // }
-
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      visibility: hidden;
+      border-radius: 999px;
+      background-color: $shams-white;
+      z-index: -1;
+      transform: translate(0, -100%);
+    }
+    &:hover::before {
+      visibility: visible;
+      transform: translate(0, 0);
+      animation: wave 0.6s linear;
+    }
   }
-  &__card-content {
-    width: 468px;
 
-    padding: $spacing-48;
+  &__action {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: $spacing-24;
+  }
+
+  &__slide-control {
+    border-radius: 999px;
+    width: 40px;
+    height: 40px;
+    background: $shams-white;
+    border: 1px solid $shams-blue;
+    color: $shams-blue;
+  }
+
+  :dir(rtl) {
+    .hero__slide-icon {
+      transform: rotate(180deg);
+    }
+  }
+
+  &__slide-action {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__banner {
+    img {
+      min-height: 100vh;
+      object-fit: cover;
+    }
   }
 }
+
+
+.links{
+  padding-block: $spacing-48;
+  background-color: #E6FAFD;
+  &__slide-title{
+    font-size: $font-xxxl;
+    font-weight: bold;
+    color: $shams-blue-dark;
+  }
+}
+
+
+.links__slide-container{
+  display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    z-index: 1;
+    width: 100%;
+    position: relative;
+}
+
+
+      .links__slide-item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 25px;
+        // max-width: 200px;
+        background-color: #fff;
+        border: 1px solid transparent;
+        
+        // padding: calculate-spacing(1.5);
+        height: 200px;
+
+        a {
+          color: #898d8d;
+          border: none !important;
+          outline: none !important;
+          text-decoration: none !important;
+
+          .links__slide-item-title {
+            opacity: 0;
+            
+            visibility: hidden;
+            height: 0;
+
+            @media screen and (max-width: 991px) {
+              opacity: 1;
+              visibility: visible;
+              height: auto;
+
+            }
+
+            text-align: center;
+            @include transition-ease;
+          }
+          .links__slide-item-logo{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            // margin-bottom: calculate-spacing(1.5);
+            
+            img {
+             max-width: 132px;
+           }
+          }
+        }
+        &:hover {
+          border: 1px solid $shams-blue;
+          a{
+            .logo-title {
+              opacity: 1;
+              height: auto;
+              visibility: visible;
+              margin-top: 10px;
+            }
+          }
+        }
+
+        @media (max-width: 991px) {
+          .logo-item {
+            min-width: 200px;
+          }
+        }
+      }
