--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -22,7 +22,6 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
-  font-size: 1rem;
 }
 
 p {
@@ -42,6 +41,11 @@ a{
 }
 
 img{
+  display: block;
+  width: 100%;
+}
+
+video{
   display: block;
   width: 100%;
 }
