--- a/assets/scss/layout/_navbar.scss
+++ b/assets/scss/layout/_navbar.scss
@@ -3,6 +3,9 @@
   align-items: center;
   justify-content: space-between;
   background-color: rgb($shams-blue-dark, 0.2);
+  @include breakpoint($lg,max) {
+    background-color: $shams-blue-dark;
+  }
   width: 100%;
 
   border-bottom: 0.5px solid $shams-blue-light;
@@ -12,8 +15,10 @@
   z-index: 999;
 
   &__logo-img {
-    &--scrolled{
-      display: none;
+    @include breakpoint($lg) {
+      &--scrolled{
+        display: none;
+      }
     }
 
     @include breakpoint($lg, max) {
