--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -151,20 +151,21 @@
   }
 }
 
-
-.links{
+.links {
   padding-block: $spacing-48;
-  background-color: #E6FAFD;
-  &__slide-title{
+  background-color: #e6fafd;
+  &__slide-title {
     font-size: $font-xxxl;
     font-weight: bold;
     color: $shams-blue-dark;
   }
-}
 
+  &__slide-title {
+    margin-bottom: $spacing-24;
+  }
 
-.links__slide-container{
-  display: flex;
+  &__slide-container {
+    display: flex;
     align-content: center;
     align-items: center;
     justify-content: space-between;
@@ -172,69 +173,79 @@
     z-index: 1;
     width: 100%;
     position: relative;
-}
+  }
 
+  &__slide-item-title {
+    opacity: 0;
 
-      .links__slide-item {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 25px;
-        // max-width: 200px;
-        background-color: #fff;
-        border: 1px solid transparent;
-        
-        // padding: calculate-spacing(1.5);
-        height: 200px;
+    visibility: hidden;
+    height: 0;
 
-        a {
-          color: #898d8d;
-          border: none !important;
-          outline: none !important;
-          text-decoration: none !important;
+    @include breakpoint($md, max) {
+      opacity: 1;
+      visibility: visible;
+      height: auto;
+    }
 
-          .links__slide-item-title {
-            opacity: 0;
-            
-            visibility: hidden;
-            height: 0;
+    text-align: center;
+    @include transition-ease;
+  }
 
-            @media screen and (max-width: 991px) {
-              opacity: 1;
-              visibility: visible;
-              height: auto;
+  &__slide-item-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-            }
+    img {
+      max-width: 132px;
+    }
+  }
 
-            text-align: center;
-            @include transition-ease;
-          }
-          .links__slide-item-logo{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            // margin-bottom: calculate-spacing(1.5);
-            
-            img {
-             max-width: 132px;
-           }
-          }
-        }
-        &:hover {
-          border: 1px solid $shams-blue;
-          a{
-            .logo-title {
-              opacity: 1;
-              height: auto;
-              visibility: visible;
-              margin-top: 10px;
-            }
-          }
-        }
+  &__slide-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    background-color: #fff;
+    border: 1px solid transparent;
+    height: 200px;
+    padding: $spacing-24;
 
-        @media (max-width: 991px) {
-          .logo-item {
-            min-width: 200px;
-          }
+    a {
+      color: $shams-blue-dark;
+    }
+    &:hover {
+      border: 1px solid $shams-blue;
+      a {
+        .links__slide-item-title {
+          opacity: 1;
+          height: auto;
+          visibility: visible;
+          margin-top: 10px;
         }
       }
+    }
+
+    @include breakpoint($md, max) {
+      .links__slide-item-title {
+        min-width: 200px;
+      }
+    }
+  }
+}
+
+.pattern {
+  position: relative;
+  &__video {
+    width: 100%;
+    height: 132px;
+    object-fit: cover;
+  }
+  img{
+    position: absolute;
+    inset: 0;
+    height: 132px;
+    object-fit: cover;
+    overflow: hidden;
+  }
+}
