--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -19,6 +19,7 @@ $spacing-32: 32px;
 $spacing-36: 36px;
 $spacing-38: 38px;
 $spacing-48: 48px;
+$spacing-50: 50px;
 
 //////////////////////
 //colors
