--- a/assets/scss/layout/_navbar.scss
+++ b/assets/scss/layout/_navbar.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: rgb($shams-blue-dark, 0.2);
-  @include breakpoint($lg,max) {
+  @include breakpoint($lg, max) {
     background-color: $shams-blue-dark;
   }
   width: 100%;
@@ -15,11 +15,9 @@
   z-index: 999;
 
   &__logo-img {
-   
-      &--scrolled{
-        display: none;
-      }
-    
+    &--scrolled {
+      display: none;
+    }
 
     @include breakpoint($xl, max) {
       width: 152px;
@@ -51,7 +49,7 @@
     display: flex;
     align-items: center;
     gap: $spacing-24;
-  
+
     @include breakpoint($lg, $xl) {
       gap: $spacing-6;
     }
@@ -78,9 +76,37 @@
     padding: $spacing-8 $spacing-16;
     border-radius: 999px;
     font-size: $spacing-18;
+    position: relative;
 
-    &--menu{
+    &--menu {
       margin-block: $spacing-8;
+    }
+
+    @include transition-ease(0.3s, background-color);
+    z-index: 1;
+    border: 1px solid $shams-yellow;
+    &:hover {
+      @include transition-ease(0.4s, color);
+      color: $shams-yellow;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      visibility: hidden;
+      border-radius: 999px;
+      background-color: $shams-white;
+      z-index: -1;
+      transform: translate(0, -100%);
+    }
+    &:hover::before {
+      visibility: visible;
+      transform: translate(0, 0);
+      animation: wave 0.6s linear;
     }
   }
 
@@ -104,7 +130,7 @@
       }
     }
 
-    &--responsive{
+    &--responsive {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -120,7 +146,7 @@
       max-height: calc(100vh - 99px);
       overflow-y: scroll;
 
-      &--open{
+      &--open {
         display: flex;
       }
 
@@ -129,25 +155,23 @@
       }
     }
 
-    &-item{
+    &-item {
       padding: $spacing-16 $spacing-12;
       border-bottom: 1px solid $shams-blue-dark;
-      a{
-
+      a {
         display: flex;
         align-items: center;
         justify-content: space-between;
       }
     }
 
-    &-lang{
+    &-lang {
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: $font-lg;
       padding: $spacing-16 $spacing-12;
     }
-
   }
 
   &__menu--open {
@@ -176,31 +200,30 @@
   }
 
   @include breakpoint($lg) {
-  &--scrolled{
-    .header__logo-img{
-      display: none;
-    }
-    .header__logo-img--scrolled{
-      display: block;
-      @include breakpoint($xl, max) {
-      width: 152px;
-    }
-    }
-    .header__menu-line-1,
-    .header__menu-line-2,
-    .header__menu-line-3 {
-      background-color: $shams-blue-dark;
-    }
+    &--scrolled {
+      .header__logo-img {
+        display: none;
+      }
+      .header__logo-img--scrolled {
+        display: block;
+        @include breakpoint($xl, max) {
+          width: 152px;
+        }
+      }
+      .header__menu-line-1,
+      .header__menu-line-2,
+      .header__menu-line-3 {
+        background-color: $shams-blue-dark;
+      }
 
-    .header__nav-list{
-      color: $shams-blue-dark;
-    }
+      .header__nav-list {
+        color: $shams-blue-dark;
+      }
 
-    .header__lang{
-      color: $shams-blue-dark;
+      .header__lang {
+        color: $shams-blue-dark;
+      }
+      background-color: $shams-white;
     }
-    background-color: $shams-white;
   }
-}
-
 }
