--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -30,6 +30,8 @@ $shams-blue: #0d66b0;
 $shams-blue-dark: #08266e;
 $shams-blue-light: #00c4e5;
 $shams-yellow: #ffad36;
+$shams-mint: #e6fafd;
+
 
 //////////////////////
 //fonts
