--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -22,6 +22,7 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
+  line-height: normal;
 }
 
 p {
@@ -35,17 +36,17 @@ ul {
   padding: 0;
 }
 
-a{
+a {
   text-decoration: none;
   color: inherit;
 }
 
-img{
+img {
   display: block;
   width: 100%;
 }
 
-video{
+video {
   display: block;
   width: 100%;
 }
