--- a/assets/scss/utils/_classes.scss
+++ b/assets/scss/utils/_classes.scss
@@ -1,3 +1,24 @@
 .bg-mint {
   background-color: $shams-mint;
 }
+
+.bg-white {
+    background-color: $shams-white;
+}
+
+.bg-blue {
+    background-color: $shams-blue;
+}
+
+.bg-blue-dark {
+    background-color: $shams-blue-dark;
+}
+
+.bg-blue-light {
+    background-color: $shams-blue-light;
+}
+
+.bg-yellow {
+    background-color: $shams-yellow;
+}
+
