--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -459,7 +459,7 @@
     }
   }
 
-  &__overlay-pattern{
+  &__overlay-pattern {
     position: absolute;
     left: 0;
     bottom: 0;
@@ -467,11 +467,59 @@
     z-index: 99;
     opacity: 0.1;
     height: 50px;
-    img{
+    img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       object-position: bottom;
+    }
+  }
+}
+
+.news {
+  margin-bottom: 50px;
+  padding-block: $spacing-48;
+  &__heading {
+    display: flex;
+    align-items: center;
+    gap: $spacing-24;
+    h2 {
+      font-size: $font-xxxl;
+      font-weight: 700;
+      color: $shams-blue-dark;
+    }
+  }
+  &__heading-action {
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      gap: $spacing-8;
+      padding-block: $spacing-12;
+    }
+  }
+  &__heading-action-text {
+    color: $shams-blue;
+    font-size: $font-md;
+  }
+  &__heading-action-btn {
+    color: $shams-blue;
+    background: transparent;
+    border: 1px solid $shams-blue;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.contact {
+  &__heading {
+    border: 0.5px solid red; 
+    padding-right: $spacing-24;
+    h2 {
+      font-size: $font-xxxl;
+      font-weight: 700;
+      color: $shams-blue-dark;
     }
   }
 }
