--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -510,6 +510,97 @@
     width: 40px;
     height: 40px;
   }
+  &__tabs{
+    &__nav{
+      &.nav-pills{
+        display: flex;
+        flex-direction: column;
+        .nav-link{
+          padding: $spacing-24;
+          border-radius: 12px;
+          &.active{
+            background: $shams-blue-light ;
+            h4,h5{
+              color: $shams-white;
+            }
+          }
+          h4{
+            @include line-clamp(2);
+            font-size: 18px;
+            text-align: right;
+            margin-bottom: 0;
+            font-weight: bold;
+            color: $shams-blue-dark;
+          }
+          h5{
+            margin-top: $spacing-8;
+            @include line-clamp(2);
+            font-size: 14px;
+            text-align: right;
+            color: $shams-blue-dark;
+          }
+        }
+      } 
+    }
+    &__content{
+      .tab-pane{
+
+      }
+      &__wrapper{
+        position: relative;
+        border-radius: 12px;
+        overflow: hidden;
+        height: 455px;
+        img{
+          height: 100%;
+          object-fit: cover;
+        }
+        .layer{
+          @include transition-ease;
+          position: absolute;
+          inset: 0;
+          background: linear-gradient(0deg, $shams-blue-dark 0%, transparent 80%);
+          z-index: 99;
+          border-radius: $spacing-12;
+        }
+        &__description{
+          padding: $spacing-24;
+          position: absolute;
+          bottom: 0;
+          z-index: 9999;
+          display: flex;
+          flex-direction: column;
+          gap: 8px;
+          p{
+            font-size: 18px;
+            color: $shams-white;
+          }
+          p,h4,h5{
+            text-align: right;
+            color: $shams-white;
+          }
+          h4{
+            @include line-clamp(2);
+            font-size: 18px;
+            margin-bottom: 0;
+            font-weight: bold;
+          }
+          h5{
+            margin-top: $spacing-8;
+            @include line-clamp(2);
+            font-size: 14px;
+          }
+          .primary-btn{
+            margin-top: $spacing-24 !important;
+            margin-bottom: 0;
+            display: flex;
+            align-self: end;
+          }
+
+        }
+      }
+    }
+  }
 }
 
 .contact {
