--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1011,10 +1011,24 @@ body {
 .news__tabs__nav.nav-pills {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  position: unset;
+  gap: unset;
+  margin-block: unset;
 }
 .news__tabs__nav.nav-pills .nav-link {
   padding: 24px;
   border-radius: 12px;
+  box-sizing: unset;
+  flex: unset;
+  width: 100%;
+  height: auto;
+  background: unset;
+  opacity: 1;
+  margin-left: unset;
+  margin-right: unset;
+  text-indent: unset;
+  border: unset;
 }
 .news__tabs__nav.nav-pills .nav-link.active {
   background: #00c4e5;
@@ -1073,7 +1087,7 @@ body {
   padding: 24px;
   position: absolute;
   bottom: 0;
-  z-index: 9999;
+  z-index: 99;
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -1116,6 +1130,19 @@ body {
   margin-bottom: 0;
   display: flex;
   align-self: end;
+}
+.news .carousel-control-prev,
+.news .carousel-control-next {
+  position: unset;
+  border: 1px solid #0d66b0;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: 24px;
+}
+.news .carousel-control-prev svg,
+.news .carousel-control-next svg {
+  color: #0d66b0;
 }
 
 .contact__heading {
