--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -515,9 +515,23 @@
       &.nav-pills{
         display: flex;
         flex-direction: column;
+        width: 100%;
+        position: unset;
+        gap: unset;
+        margin-block: unset;
         .nav-link{
           padding: $spacing-24;
           border-radius: 12px;
+          box-sizing: unset;
+          flex: unset;
+          width: 100%;
+          height: auto;
+          background: unset;
+          opacity: 1;
+          margin-left: unset;
+          margin-right: unset;
+          text-indent: unset;
+          border: unset;
           &.active{
             background: $shams-blue-light ;
             h4,h5{
@@ -567,7 +581,7 @@
           padding: $spacing-24;
           position: absolute;
           bottom: 0;
-          z-index: 9999;
+          z-index: 99;
           display: flex;
           flex-direction: column;
           gap: 8px;
@@ -601,6 +615,19 @@
       }
     }
   }
+  .carousel-control-prev,
+  .carousel-control-next{
+    position: unset;
+    border: 1px solid $shams-blue;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-top: $spacing-24;
+    svg{
+      color: $shams-blue;
+    }
+  }
+
 }
 
 .contact {
