--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -20,6 +20,8 @@ $spacing-36: 36px;
 $spacing-38: 38px;
 $spacing-48: 48px;
 $spacing-50: 50px;
+$spacing-64: 64px;
+$spacing-72: 72px;
 
 //////////////////////
 //colors
@@ -31,7 +33,7 @@ $shams-blue-dark: #08266e;
 $shams-blue-light: #00c4e5;
 $shams-yellow: #ffad36;
 $shams-mint: #e6fafd;
-
+$shams-gray: #898d8d;
 
 //////////////////////
 //fonts
@@ -58,4 +60,3 @@ $lg: 992px;
 $xl: 1200px;
 $xxl: 1400px;
 $xxxl: 1600px;
-
