--- a/assets/scss/components/_circle-pregress-circle.scss
+++ b/assets/scss/components/_circle-pregress-circle.scss
@@ -1,32 +1,29 @@
-.progress-container {
-            position: relative;
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            background-color: rgba(0, 0, 0, 0.1);
-        }
+@keyframes growProgressBar {
+  0%, 33% { --pgPercentage: 0; }
+  100% { --pgPercentage: var(--value); }
+}
 
-        .progress-bar {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            clip: rect(0, 50px, 100px, 0);
-            background-color: transparent;
-        }
+@property --pgPercentage {
+  syntax: '<number>';
+  inherits: false;
+  initial-value: 0;
+}
 
-        .progress-bar::before {
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            border: 5px solid #3498db;
-            box-sizing: border-box;
-        }
-
-        .update-button {
-            margin-top: 20px;
-            padding: 10px;
-            cursor: pointer;
-        }
+div[role="progressbar"] {
+  --size: 100px;
+  --fg: #00C4E5;
+  --bg:rgba(137, 141, 141, 0.10);
+  --pgPercentage: var(--value);
+  animation: growProgressBar 1s 1 forwards;
+  width: var(--size);
+  height: var(--size);
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  background: 
+    radial-gradient(closest-side, white 88%, transparent 0 99.9%, white 0),
+    conic-gradient(var(--fg) calc(var(--pgPercentage) * 1%), var(--bg) 0)
+    ;
+  font-size: calc(var(--size) / 5);
+  color: var(--fg);
+}
