--- a/assets/scss/pages/_contact.scss
+++ b/assets/scss/pages/_contact.scss
@@ -1,7 +1,8 @@
-.a{
-  background-color: red;
-}
-
-.b{
-  background-color: blue;
+.contact-page {
+  .a {
+    background-color: red;
+  }
+  .b {
+    background-color: blue;
+  }
 }
