--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -3,3 +3,6 @@
 @import './tenders';
 @import './contact';
 @import './projects';
+@import './project';
+@import './partener';
+@import './media-center';
