--- a/assets/scss/utils/_classes.scss
+++ b/assets/scss/utils/_classes.scss
@@ -3,8 +3,7 @@
 }
 .bg-mint-pattern {
   // background-color: $shams-blue-light;
-  background: 
-    url(../../img/dynamic/bg-pattern.svg) 35% center rgb(188, 169, 169);
+  background-image: url(../../img/dynamic/project-1.jpg);
 }
 
 .bg-white {
