--- a/assets/scss/pages/_contact.scss
+++ b/assets/scss/pages/_contact.scss
@@ -1,8 +1,65 @@
 .contact-page {
-  .a {
-    background-color: red;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: $spacing-24;
+
+    &-title {
+      font-size: 36px;
+      font-weight: 700;
+      color: $shams-blue-dark;
+    }
   }
-  .b {
-    background-color: blue;
+
+  &__form-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: $spacing-10;
+    input {
+      border: 1px solid rgba($color: $shams-blue-dark, $alpha: 0.4);
+      border-radius: $spacing-8;
+      padding: $spacing-12 $spacing-6;
+      font-size: $font-md;
+      color: $shams-blue-dark;
+      &::placeholder {
+        color: rgba($color: $shams-blue-dark, $alpha: 0.4);
+        font-size: $font-md;
+      }
+
+      &:focus {
+        outline: none;
+        border-color: $shams-blue-dark;
+      }
+    }
+
+    label {
+      font-size: $font-md;
+      color: $shams-blue-dark;
+    }
+  }
+
+  &__form-message {
+    display: flex;
+    flex-direction: column;
+    gap: $spacing-10;
+  }
+
+  &__form-area {
+    border: 1px solid rgba($color: $shams-blue-dark, $alpha: 0.4);
+    border-radius: $spacing-8;
+    padding: $spacing-12 $spacing-6;
+    font-size: $font-md;
+    color: $shams-blue-dark;
+    &::placeholder {
+      color: rgba($color: $shams-blue-dark, $alpha: 0.4);
+      font-size: $font-md;
+    }
+
+    &:focus {
+      outline: none;
+      border-color: $shams-blue-dark;
+    }
   }
 }
